// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Post Screen is loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Post />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <PostHeaderMenu
          index={1}
          onRef={[Function]}
          parentHeight={0}
          position={
            Object {
              "x": 750,
              "y": 0,
            }
          }
          solved={false}
        />,
        <Header
          animated={false}
          backable={true}
          onLayout={[Function]}
          onRightPress={[Function]}
          rightIcon="more"
          rightStyle={
            Object {
              "color": "#4E4A47",
            }
          }
          subtitle={null}
          title={
            Object {
              "color": "#2F78B0",
              "context": "",
              "numberOfLines": 4,
            }
          }
        />,
        <PostSwipable
          onChangeTab={[Function]}
          onRef={[Function]}
        />,
        <PostFooter
          enableRefresh={false}
          firstPage={true}
          lastPage={true}
          onPageChangeThunk={[Function]}
          onRefresh={[Function]}
        />,
      ],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "index": 1,
          "native": undefined,
          "onRef": [Function],
          "parentHeight": 0,
          "position": Object {
            "x": 750,
            "y": 0,
          },
          "solved": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "backable": true,
          "onLayout": [Function],
          "onRightPress": [Function],
          "rightIcon": "more",
          "rightStyle": Object {
            "color": "#4E4A47",
          },
          "subtitle": null,
          "title": Object {
            "color": "#2F78B0",
            "context": "",
            "numberOfLines": 4,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "comments": undefined,
          "onChangeTab": [Function],
          "onRef": [Function],
          "solved": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "enableRefresh": false,
          "firstPage": true,
          "lastPage": true,
          "onPageChangeThunk": [Function],
          "onRefresh": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <PostHeaderMenu
            index={1}
            onRef={[Function]}
            parentHeight={0}
            position={
              Object {
                "x": 750,
                "y": 0,
              }
            }
            solved={false}
          />,
          <Header
            animated={false}
            backable={true}
            onLayout={[Function]}
            onRightPress={[Function]}
            rightIcon="more"
            rightStyle={
              Object {
                "color": "#4E4A47",
              }
            }
            subtitle={null}
            title={
              Object {
                "color": "#2F78B0",
                "context": "",
                "numberOfLines": 4,
              }
            }
          />,
          <PostSwipable
            onChangeTab={[Function]}
            onRef={[Function]}
          />,
          <PostFooter
            enableRefresh={false}
            firstPage={true}
            lastPage={true}
            onPageChangeThunk={[Function]}
            onRefresh={[Function]}
          />,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "index": 1,
            "native": undefined,
            "onRef": [Function],
            "parentHeight": 0,
            "position": Object {
              "x": 750,
              "y": 0,
            },
            "solved": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "backable": true,
            "onLayout": [Function],
            "onRightPress": [Function],
            "rightIcon": "more",
            "rightStyle": Object {
              "color": "#4E4A47",
            },
            "subtitle": null,
            "title": Object {
              "color": "#2F78B0",
              "context": "",
              "numberOfLines": 4,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "comments": undefined,
            "onChangeTab": [Function],
            "onRef": [Function],
            "solved": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "enableRefresh": false,
            "firstPage": true,
            "lastPage": true,
            "onPageChangeThunk": [Function],
            "onRefresh": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing Post Screen renders as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Post
    comments={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <PostHeaderMenu
          index={1}
          onRef={[Function]}
          parentHeight={0}
          position={
            Object {
              "x": 750,
              "y": 0,
            }
          }
          solved={false}
        />,
        <Header
          animated={false}
          backable={true}
          onLayout={[Function]}
          onRightPress={[Function]}
          rightIcon="more"
          rightStyle={
            Object {
              "color": "#4E4A47",
            }
          }
          subtitle={null}
          title={
            Object {
              "color": "#2F78B0",
              "context": "",
              "numberOfLines": 4,
            }
          }
        />,
        <PostSwipable
          comments={Array []}
          onChangeTab={[Function]}
          onRef={[Function]}
        />,
        <PostFooter
          enableRefresh={false}
          firstPage={true}
          lastPage={true}
          onPageChangeThunk={[Function]}
          onRefresh={[Function]}
        />,
      ],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "index": 1,
          "native": undefined,
          "onRef": [Function],
          "parentHeight": 0,
          "position": Object {
            "x": 750,
            "y": 0,
          },
          "solved": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "backable": true,
          "onLayout": [Function],
          "onRightPress": [Function],
          "rightIcon": "more",
          "rightStyle": Object {
            "color": "#4E4A47",
          },
          "subtitle": null,
          "title": Object {
            "color": "#2F78B0",
            "context": "",
            "numberOfLines": 4,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "comments": Array [],
          "onChangeTab": [Function],
          "onRef": [Function],
          "solved": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "enableRefresh": false,
          "firstPage": true,
          "lastPage": true,
          "onPageChangeThunk": [Function],
          "onRefresh": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <PostHeaderMenu
            index={1}
            onRef={[Function]}
            parentHeight={0}
            position={
              Object {
                "x": 750,
                "y": 0,
              }
            }
            solved={false}
          />,
          <Header
            animated={false}
            backable={true}
            onLayout={[Function]}
            onRightPress={[Function]}
            rightIcon="more"
            rightStyle={
              Object {
                "color": "#4E4A47",
              }
            }
            subtitle={null}
            title={
              Object {
                "color": "#2F78B0",
                "context": "",
                "numberOfLines": 4,
              }
            }
          />,
          <PostSwipable
            comments={Array []}
            onChangeTab={[Function]}
            onRef={[Function]}
          />,
          <PostFooter
            enableRefresh={false}
            firstPage={true}
            lastPage={true}
            onPageChangeThunk={[Function]}
            onRefresh={[Function]}
          />,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "index": 1,
            "native": undefined,
            "onRef": [Function],
            "parentHeight": 0,
            "position": Object {
              "x": 750,
              "y": 0,
            },
            "solved": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "backable": true,
            "onLayout": [Function],
            "onRightPress": [Function],
            "rightIcon": "more",
            "rightStyle": Object {
              "color": "#4E4A47",
            },
            "subtitle": null,
            "title": Object {
              "color": "#2F78B0",
              "context": "",
              "numberOfLines": 4,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "comments": Array [],
            "onChangeTab": [Function],
            "onRef": [Function],
            "solved": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "enableRefresh": false,
            "firstPage": true,
            "lastPage": true,
            "onPageChangeThunk": [Function],
            "onRefresh": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
